templates/service-helm.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-helm
spec:
  selector:
    app: nginx
  ports:
    - name: main
      protocol: TCP
      port: 80
      targetPort: 80
