templates/ingress-helm.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-helm
  annotations:
    http.port: "443"
spec:
  backend:
    serviceName: nginx-service-helm
    servicePort: 80
